--- a/.gitconfig
+++ b/.gitconfig
@@ -1,5 +1,11 @@
 [alias]
 
+    # Stage all changes
+    sa = add .
+
+    # Commit with message
+    cmt = !"d() { commit -m $1; }; d"
+
 	# View abbreviated SHA, description, and history graph of the latest 20 commits
 	l = log --pretty=oneline -n 20 --graph --abbrev-commit
 
