--- a/.gitconfig
+++ b/.gitconfig
@@ -4,7 +4,7 @@
     sa = add .
 
     # Commit with message
-    cmt = !"d() { commit -m $1; }; d"
+    cmt = !"f() { git commit -m $1; }; f -"
 
 	# View abbreviated SHA, description, and history graph of the latest 20 commits
 	l = log --pretty=oneline -n 20 --graph --abbrev-commit
