--- a/.gitconfig
+++ b/.gitconfig
@@ -116,9 +116,9 @@
 
 [color "status"]
 
-	added = yellow
-	changed = green
-	untracked = cyan
+	added = green
+	changed = yellow
+	untracked = red
 
 [diff]
 
