--- a/.gitconfig
+++ b/.gitconfig
@@ -76,6 +76,9 @@
 		fi \
 	}; f"
 	
+	# Check local branches that no longer have a remote
+	rlc = "!git fetch -p && git branch -vv | grep ': gone]' | awk '{print $1}'"
+	
 	# Remove local branches that no longer have a remote
 	rl = "!git fetch -p && for branch in `git branch -vv | grep ': gone]' | awk '{print $1}'`; do git branch -D $branch; done"
 [apply]
