--- a/.gitconfig
+++ b/.gitconfig
@@ -92,6 +92,10 @@
 	
 	# Check local branches that no longer have a remote
 	rlc = "!git fetch -p && git branch -vv | grep ': gone]' | awk '{print $1}'"
+	
+	# Remove all dangling objects and clean history
+	full-clean = "!git reflog expire --expire-unreachable=now --all && git gc --prune=now"
+	
 [apply]
 
 	# Detect whitespace errors when applying a patch
